--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -14,10 +14,10 @@
 
         <Button
             android:id="@+id/btnHome"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:background="@drawable/house"
-            android:onClick="btnHomeClick" />
+            android:onClick="onHomeClick" />
     </LinearLayout>
 
     <TextView
@@ -49,10 +49,10 @@
 
         <Button
             android:id="@+id/btnFeedback"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:background="@drawable/clipboard"
-            android:onClick="btnFeedbackClick" />
+            android:onClick="onHomeClick" />
     </LinearLayout>
 
 </RelativeLayout>
