--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -48,11 +48,11 @@
         android:layout_margin="5dp" >
 
         <Button
-            android:id="@+id/btnFeedback"
+            android:id="@+id/btnLogout"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:background="@drawable/clipboard"
-            android:onClick="onHomeClick" />
+            android:background="@drawable/logout"
+            android:onClick="onLogoutClick" />
     </LinearLayout>
 
 </RelativeLayout>
